[TASK] Task-0: update codebase to improve readability and expandability

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -2,5 +2,5 @@ Wegmeister:
   LanguageRedirect:
     # Add mappings for language codes if you use some different codes than the default ones.
     languageCodeOverrides: {}
-    # configure the name of your frontend language cookie name
-    feLanguageCookieName: _fe_language
+    # Configure the name of your frontend language cookie name
+    feLanguageCookieName: ''
